Fix scrollbar issue

--- a/src/components/Overlay.css
+++ b/src/components/Overlay.css
@@ -3,29 +3,32 @@
   position: absolute;
   z-index: 1;
   top: 10px;
-  right: 10px;
-  bottom: 10px;
   left: 10px;
   width: calc(100vw - 20px);
   height: calc(100vh - 20px);
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .overlay__inner {
-  padding: 10px 30px;
   position: relative;
-  min-height: 100%;
+  height: 100%;
+  overflow: auto;
 }
 
-.overlay__inner::after {
-  background-color: white;
+.overlay__inner__content {
+  padding: 10px 30px;
+  position: relative;
+}
+
+.overlay__inner__transp-layer {
+  background-color: #fff;
   opacity: 0.8;
   content: "";
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 0;
   right: 0;
+  height: 100%;
   z-index: -1;
 }
 
@@ -45,14 +48,12 @@
 @media (min-width: 1200px) {
   .overlay {
     top: 40px;
-    right: 170px;
-    bottom: 40px;
     left: 170px;
     width: calc(100vw - 340px);
     height: calc(100vh - 80px);
   }
 
-  .overlay__inner {
+  .overlay__inner__content {
     padding: 20px 60px;
   }
 }
